[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "waveforms"
authors = [
    {name = "Campbell McDiarmid", email = "campbell.mcdiarmid@icloud.com"}
]

description = "Simulation tools for modulating and demodulating data using various waveform definitions."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["waveforms"]
license = {text = "MIT"}
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "pytest",
]

[tool.setuptools.packages.find]
include = ["waveforms*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
indent-width = 4
output-format = "concise"
show-fixes = true

[tool.ruff.lint]
select = [  # See https://docs.astral.sh/ruff/rules/
    "ALL"
]
ignore = [
    "D100", "D101", "D107", "ANN101"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F403", "F401", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

