[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "waveforms"
authors = [
    {name = "Campbell McDiarmid", email = "campbell.mcdiarmid@icloud.com"}
]

description = "Simulation tools for modulating and demodulating data using various waveform definitions."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["waveforms"]
license = {text = "MIT"}
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
version = "0.1.0"
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
viz = [
    "waveforms-viz @ {root:uri}/waveforms-viz",
]
all = [
    "waveforms[viz]"
]
dev = [
    "waveforms[all]",
    "ruff == 0.7",
    "black >= 20.0.0, < 25",
    "pytest == 8.3.3",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
indent-width = 4
output-format = "concise"
show-fixes = true

[tool.ruff.lint]
select = [  # See https://docs.astral.sh/ruff/rules/
    "ALL"
]
ignore = [
    "D100", "D101", "D107", "ANN101",
    "RUF200",  # relative sub-project path not supported in any PEP
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F403", "F401", "D104"]
"tests/*.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

