[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "waveforms-core"
authors = [
    {name = "Campbell McDiarmid", email = "campbell.mcdiarmid@icloud.com"}
]

description = "Waveforms core module."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["waveforms-core"]
license = {text = "MIT"}
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "scipy",
]
version = "0.1.0"

[tool.setuptools.packages.find]
include = ["waveforms*"]
